--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -3789,7 +3789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3804,19 +3804,30 @@
     "#and the current datetime (`datetime.datetime.now()`) to the `build_datetime` attribute\n",
     "#Let's call this model version '1.0'\n",
     "best_model = rf_grid_cv.best_estimator_\n",
-    "best_model.version = ___\n",
-    "best_model.pandas_version = ___\n",
-    "best_model.numpy_version = ___\n",
-    "best_model.sklearn_version = ___\n",
+    "best_model.version = '1.0'\n",
+    "best_model.pandas_version = pd.__version__\n",
+    "best_model.numpy_version = np.__version__\n",
+    "best_model.sklearn_version = sklearn_version\n",
     "best_model.X_columns = [col for col in X_train.columns]\n",
-    "best_model.build_datetime = ___"
+    "best_model.build_datetime = datetime.datetime.now()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)Y\n",
+      "Writing file.  \"../models/ski_resort_pricing_model.pkl\"\n"
+     ]
+    }
+   ],
    "source": [
     "# save the model\n",
     "\n",
